--- a/app/user/login.component.html
+++ b/app/user/login.component.html
@@ -5,15 +5,19 @@
   <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off">
     <div class="form-group" >
       <label for="userName">User Name:</label>
+      <em *ngIf="loginForm.controls.userName?.invalid && (loginForm.controls.userName?.touched || mouseoverLogin)">Required</em>
       <!--<input id="userName" (input)="userName=$event.target.value" type="text" class="form-control" placeholder="User Name..." />-->
-      <input (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..." />
+      <input (ngModel)="userName" name="userName" required id="userName" type="text" class="form-control" placeholder="User Name..." />
     </div>
     <div class="form-group" >
       <label for="password">Password:</label>
-      <input (ngModel)="password" name="password" id="password" type="password" class="form-control"placeholder="Password..." />
+      <em *ngIf="loginForm.controls.password?.invalid && (loginForm.controls.password?.touched || mouseoverLogin)">Reqired</em>
+      <input (ngModel)="password" name="password" required id="password" type="password" class="form-control"placeholder="Password..." />
     </div>
-
-    <button type="submit" class="btn btn-primary">Login</button>
+    <!--disabled buttons don't raise events, this is why we need to wrap this button in span-->
+    <span (mouseenter)="mouseoverLogin=true" (mouseleave)="mouseoverLogin=false">
+    <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
+    </span>
     <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
   </form>
 </div>
