--- a/app/user/profile.component.html
+++ b/app/user/profile.component.html
@@ -20,4 +20,11 @@
       <button (click)="cancel()" type="button" class="btn btn-default">Cancel</button>
     </form>
   </div>
+  <div class = "col-md-4">
+    <h2>Debug Info</h2>
+    Form value: {{profileForm.value | json}}<br />
+    Form status:  {{profileForm.status | json}}<br />
+  </div>
+</div>
+<div>
 </div>
