--- a/app/events/event-details/session-list.component.html
+++ b/app/events/event-details/session-list.component.html
@@ -1,13 +1,23 @@
 <div class="row" *ngFor="let session of sessions">
   <div class="col-md-10">
+    <!--Version 1 - No Projection-->
     <!--<div class="well">
         <h4>{{session.name}}</h4>-->
-    <collapsible-well [title]="session.name">
-        <h6>{{session.presenter}}</h6>
-        <span>Duration: {{session.duration}}</span><br />
-        <span>Level: {{session.level}}</span>
-        <p>{{session.abstract}}</p>
+    <!--Version 2 Single projection slot-->
+    <!--<collapsible-well [title]="session.name">-->
+       <collapsible-well>
+        <div well-title>
+            {{session.name}}
+            <i *ngIf="session.voters.length > 3" class="glyphicon glyphicon-fire" style="color:red"></i>
+        </div>
+        <div well-body>
+            <h6>{{session.presenter}}</h6>
+            <span>Duration: {{session.duration}}</span><br />
+            <span>Level: {{session.level}}</span>
+            <p>{{session.abstract}}</p>
+        </div>
     </collapsible-well>
+    <!--Version 1-->
     <!--</div>-->
   </div>
 </div>
