Module 14. Clip Using Delete. Done on voter.service

--- a/app/events/event-details/event-details.component.html
+++ b/app/events/event-details/event-details.component.html
@@ -39,10 +39,10 @@
         <button class="btn btn-default" [class.active]="filterBy==='advanced'" (click)="filterBy='advanced'">Advanced</button>
       </div>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2">s
       <a (click)="addSession()">Add Session</a>
     </div>
   </div>
-  <session-list *ngIf="!addMode" [sortBy]="sortBy" [filterBy]="filterBy" [sessions]="event?.sessions"></session-list>
+  <session-list [eventId]="event?.id" *ngIf="!addMode" [sortBy]="sortBy" [filterBy]="filterBy" [sessions]="event?.sessions"></session-list>
   <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 </div>
