--- a/app/user/profile.component.html
+++ b/app/user/profile.component.html
@@ -19,6 +19,7 @@
 
       <button type="submit" class="btn btn-primary">Save</button>
       <button (click)="cancel()" type="button" class="btn btn-default">Cancel</button>
+      <button *ngIf="auth.currentUser" type="button" class="btn btn-default" style="float:right" (click)="logout()">Logout</button>
     </form>
   </div>
   <div class = "col-md-4">
