--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <!--routerLinkActiveOptions ensures the style is not applied other routes starting with '/events' like events/new for example-->
+          <!--routerLinkActiveOptions ensures the class is not applied to other routes starting with '/events' like events/new for example-->
           <a [routerLink]="['/events']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Events</a>
         </li>
         <li><a [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
